--- a/style.css
+++ b/style.css
@@ -14,3 +14,27 @@ ul {
   background-color: white;
 
 }
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px 
+}
+
+li a:hover {
+  background-color: lightblue;
+}
+ h2 { 
+      font : 2em "Courier New" ;
+ }
+ table {
+	 font: small-caps medium cursive; 
+  border-collapse: collapse;
+  width: 50%;
+}
