--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
       border: black 
 }
 h1 {
+      background-color; grey;
       color: black;
-      font; American Typewriter, serif
+      font;serif;
+      padding; 15px;
 }
 ul {
   list-style-type: none;
