--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ ul {
   background-color: white;
 
 }
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px 
+}
+
 li {
   float: left;
 }
