--- a/style.css
+++ b/style.css
@@ -32,12 +32,8 @@ li {
 li a:hover {
   background-color: lightblue;
 }
-
 .active {
-  background-color: red;
+  background-color: lightsteelblue;
 }
-.column{
-      float: left; 
-      padding:15 px;
-}
+
  
