--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 h1 {
       background-color; grey;
       color: black;
-      font;serif;
+      font; Didot, serif;
       padding; 15px;
 }
 ul {
