--- a/style.css
+++ b/style.css
@@ -5,8 +5,13 @@ body {
 h1 {
       background-color; grey;
       color: black;
-      font; Didot, serif;
+      font; Courier New; 
       padding; 15px;
+}
+.header{
+  background-color: grey;
+  color: white;
+  padding: 15px;
 }
 ul {
   list-style-type: none;
@@ -32,14 +37,8 @@ li {
 li a:hover {
   background-color: lightblue;
 }
-li a:active {
-  background-color: lightsteelblue;
-}
-header{
-  background-color: grey;
-  color: white;
-  padding: 15px;
-}
+
+
 	
 
 
