--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 h1 {
       background-color; grey;
       color: black;
-      font; Courier New; 
+      font; 2em "Courier New"; 
       padding; 15px;
 }
 .header{
@@ -35,7 +35,7 @@ li {
   float: left;
 }
 li a:hover {
-  background-color: Sky blue;
+  background-color: skyblue;
 }
 .sidebar{
 	float: right
