--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
       padding; 15px;
 }
 .header{
-  background-color: grey;
+  background-color: aliceblue;
   color: white;
   padding: 15px;
 }
