--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
       border: black 
 }
 h1 {
-      background-color; grey;
+      background-color; aliceblue;
       color: black;
       font; 2em "Courier New"; 
       padding; 15px;
