--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ li {
 li a:hover {
   background-color: skyblue;
 }
-.sidebar{
+div.sidebar{
 	float: right;
 	background-color: white;
 	padding: 50px
