--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
       color: black;
       font; 2em "Courier New"; 
       padding; 15px;
+}
 
 ul {
   list-style-type: none;
@@ -35,7 +36,7 @@ li a:hover {
 div.sidebar{
 	float: right;
 	background-color: white;
-	padding: 100px
+	padding: 50px
 }
 	
 
