--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ h1 {
       font; 2em "Courier New"; 
       padding; 15px;
 }
+.header{
+  background-color: aliceblue;
+  color: white;
+  padding: 15px;
+}
 
 ul {
   list-style-type: none;
