--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
       padding; 15px;
 }
 .header{
-  background-color: lightsteelblue;
+background-image: url("https://i.pinimg.com/originals/62/65/8c/62658ce5c2ddcbc473312dde1441e736.jpg");
   color: white;
   padding: 15px;
 }
