--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ h1 {
       padding; 15px;
 }
 .header{
-background-image: url("https://i.pinimg.com/originals/62/65/8c/62658ce5c2ddcbc473312dde1441e736.jpg");
+  background-image: url("https://i.pinimg.com/originals/62/65/8c/62658ce5c2ddcbc473312dde1441e736.jpg");
+  background-size: cover;
   color: white;
+  text-align: center;
   padding: 15px;
 }
 
