--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
       padding; 15px;
 }
 .header{
-  background-image: url("https://i.pinimg.com/originals/ec/4d/fb/ec4dfb4467cfdd3b0e8de10df1d6d9f1.jpg");
+  background-image: url("https://th.bing.com/th/id/R38a81df6c3c8486ac39f32cbc63dc2ea?rik=TkHm57%2bBVd7log&pid=ImgRaw");
   background-size: cover;
   color: white;
   text-align: center;
