--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ li {
   float: left;
 }
 li a:hover {
-  background-color: skyblue;
+  background-color: lightsteelblue;
 }
 div.sidebar{
 	float: right;
