--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ li a:hover {
 }
 div.sidebar{
 	float: right;
-	background-color: cornflowerblue;
+	background-color: lightsteelblue;
 	padding: 70px;
+	font; 2em "Courier New"
 	border: 1px solid;
 }
 	
