--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ div.sidebar{
 	float: right;
 	background-color: lightsteelblue;
 	padding: 70px;
-	font; 2em "Courier New"
+	font; 2em "Courier New";
 	border: 1px solid;
 }
 	
