--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ div.sidebar{
 	padding: 70px;
 	font; 2em "Courier New";
 	border: 1px solid;
-	width: 50%;
+	width: 300px;
 }
  table,th,td {
 	 font-family: "Courier New"; 
